--- a/.dvc/config
+++ b/.dvc/config
@@ -1,2 +1,7 @@
 [core]
     autostage = true
+    remote = gdrive_remote
+['remote "gdrive_remote"']
+    url = gdrive://yYqtyUk9PVA
+    gdrive_use_service_account = false
+    gdrive_service_account_user_email = your-service-account@your-project.iam.gserviceaccount.com
